--- a/pom.xml
+++ b/pom.xml
@@ -37,12 +37,10 @@
     <scope>compile</scope>
 </dependency>
 
-<!-- https://mvnrepository.com/artifact/org.hamcrest/hamcrest-all -->
-<dependency>
-    <groupId>org.hamcrest</groupId>
-    <artifactId>hamcrest-all</artifactId>
-    <version>1.3</version>
-    <scope>compile</scope>
+ <dependency>
+	<groupId>com.fasterxml.jackson.core</groupId>
+	<artifactId>jackson-databind</artifactId>
+	<version>2.12.3</version>
 </dependency>
 
 <!-- https://mvnrepository.com/artifact/com.google.code.gson/gson -->
@@ -52,11 +50,19 @@
     <version>2.8.5</version>
 </dependency>
 
+<!-- https://mvnrepository.com/artifact/org.hamcrest/hamcrest-all -->
+<dependency>
+    <groupId>org.hamcrest</groupId>
+    <artifactId>hamcrest-all</artifactId>
+    <version>1.3</version>
+    <scope>compile</scope>
+</dependency>
+
 <!-- https://mvnrepository.com/artifact/org.json/json -->
 <dependency>
     <groupId>org.json</groupId>
     <artifactId>json</artifactId>
-    <version>20160810</version>
+    <version>20230227</version>
 </dependency>
 
 <!-- https://mvnrepository.com/artifact/log4j/log4j -->
